Opened 16 years ago

Closed 10 years ago

#3074 closed bug (fixed)

[FileTypes] could crash if you try to open many files at once

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences/FileTypes Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Open tracker's find window and press enter. Wait until search will be over select them all (alt+a) and press Opt+alt+f to start filetypes tracker add-on.

Attachments (1)

filetypes.png (86.4 KB ) - added by diver 16 years ago.

Download all attachments as: .zip

Change History (7)

by diver, 16 years ago

Attachment: filetypes.png added

comment:1 by stpere, 15 years ago

Could you try again with a recent revision please?

comment:2 by diver, 15 years ago

Still here in hrev35413.

comment:3 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

Still here in hrev38300.

comment:4 by Coldfirex, 14 years ago

Still present in hrev39551 gcc2hybrid

comment:5 by pulkomandy, 10 years ago

Still present in hrev48547. It seems that in some case BMessage::ReplaceData can corrupt the BMessage. I fixed two possible problems in hrev48562 but it did not help.

comment:6 by stpere, 10 years ago

Resolution: fixed
Status: newclosed

Should be fixed in hrev49346. Thanks!

Note: See TracTickets for help on using tickets.